--- a/cloud_formation/kubernetes-cluster-create.template
+++ b/cloud_formation/kubernetes-cluster-create.template
@@ -264,33 +264,33 @@ Mappings:
   # http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html
   RegionMap:
     us-west-1:
-      '64': ami-35e7c755
+      '64': ami-e7604c87
     ap-south-1:
-      '64': ami-3c225e53
+      '64': ami-d82759b7
     eu-west-2:
-      '64': ami-37392e53
+      '64': ami-6a17010e
     eu-west-1:
-      '64': ami-2ebaae48
+      '64': ami-c99f84af
     ap-northeast-2:
-      '64': ami-10bc607e
+      '64': ami-d61fc0b8
     ap-northeast-1:
-      '64': ami-c2e4e1a5
+      '64': ami-58786f3f
     sa-east-1:
-      '64': ami-03cfa16f
+      '64': ami-88c5aee4
     ca-central-1:
-      '64': ami-b24df1d6
+      '64': ami-9cac13f8
     ap-southeast-1:
-      '64': ami-0968ee6a
+      '64': ami-b4f877d7
     ap-southeast-2:
-      '64': ami-3a2f3b59
+      '64': ami-40eafa23
     eu-central-1:
-      '64': ami-8cdc07e3
+      '64': ami-dfa204b0
     us-east-1:
-      '64': ami-704a0866
+      '64': ami-a90a20bf
     us-east-2:
-      '64': ami-487d5b2d
+      '64': ami-cf7756aa
     us-west-2:
-      '64': ami-a60d6ec6
+      '64': ami-9fdacee6
 
 # Helper Conditions which help find the right values for resources
 Conditions:
@@ -352,10 +352,27 @@ Resources:
                 NetworkingProviderUrl: !Sub "https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}/scripts/${NetworkingProvider}.yaml"
                 Region: !Ref AWS::Region
 
+            # Create Avi config template file
+            "/tmp/template_setup.json":
+              source: "https://s3-us-west-2.amazonaws.com/aviservicemesh/day0config/template_setup.json"
+              mode: '000666'
+
+            # Script to create Avi configuration
+            "/tmp/setup_avi_json.sh":
+              source: "https://s3-us-west-2.amazonaws.com/aviservicemesh/day0config/setup_avi_json.sh"
+              mode: '000755'
+              ignoreErrors: true
+              cwd: "/tmp/"
+              context:
+                VPCID: !Ref VPCID
+                REGION: !Ref AWS::Region
+                SUBNETID: !Ref LoadBalancerSubnetId
+
           commands:
             # Install the Cloudwatch agent with configuration for the current region and log group name
             "01-cloudwatch-agent-setup":
               command: !Sub "python /usr/local/aws/awslogs-agent-setup.py -n -r ${AWS::Region} -c /tmp/kubernetes-awslogs.conf"
+
             # Enable the Cloudwatch service and launch it
             "02-cloudwatch-service-config":
               command: "systemctl enable awslogs.service && systemctl start awslogs.service"
@@ -363,6 +380,10 @@ Resources:
             # Run the master setup
             "03-master-setup":
               command: "/tmp/setup-k8s-master.sh"
+
+            # Run the Avi setup
+            "04-avi-setup":
+              command: "/tmp/setup_avi_json.sh"
     Properties:
       # Where the EC2 instance gets deployed geographically
       AvailabilityZone: !Ref AvailabilityZone
@@ -853,6 +874,10 @@ Outputs:
     Description: Private IP address of the master.
     Value: !GetAtt K8sMasterInstance.PrivateIp
 
+  K8SClusterSG:
+    Description: K8S cluster Security Group.
+    Value: !Ref ClusterSecGroup
+
   NodeGroupInstanceId:
     Description: InstanceId of the newly-created NodeGroup.
     Value: !Ref K8sNodeGroup
@@ -865,4 +890,3 @@ Outputs:
     Description: Verify your cluster and deploy a test application. Instructions -
       http://jump.heptio.com/aws-qs-next
     Value: http://jump.heptio.com/aws-qs-next
-
