--- a/cloud_formation/kubernetes-cluster-with-new-vpc.template
+++ b/cloud_formation/kubernetes-cluster-with-new-vpc.template
@@ -234,14 +234,12 @@ Parameters:
 
   NetworkingProvider:
     AllowedValues:
-    - calico
+    - flannel
     - weave
     ConstraintDescription: 'Currently supported values are "calico" and "weave"'
-    Default: calico
+    Default: weave
     Description: Choose the networking provider to use for communication between
-      pods in the Kubernetes cluster. Supported configurations are calico 
-      (http://docs.projectcalico.org/v2.0/getting-started/kubernetes/installation/hosted/kubeadm/)
-      and weave (https://github.com/weaveworks/weave/blob/master/site/kube-addon.md).
+      pods in the Kubernetes cluster.
     Type: String
 
 Mappings:
@@ -467,7 +465,7 @@ Resources:
   K8sStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: !Sub "https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}/templates/kubernetes-cluster.template"
+      TemplateURL: "https://s3-us-west-2.amazonaws.com/aviservicemesh/kubernetes-cluster-create.template"
       Parameters:
         VPCID: !Ref VPC
         AvailabilityZone: !Ref AvailabilityZone
@@ -484,6 +482,23 @@ Resources:
         ClusterAssociation: !Ref AWS::StackName
         NetworkingProvider: !Ref NetworkingProvider
         LoadBalancerSubnetId: !Ref PublicSubnet
+
+  # This creates a new stack that creates Avi controller within the VPC
+  AviStack:
+    Type: AWS::CloudFormation::Stack
+    DependsOn: K8sStack
+    Properties:
+      TemplateURL: "https://s3-us-west-2.amazonaws.com/aviservicemesh/AviVantageSingleControllerK8S.template"
+      Parameters:
+        VpcId: !Ref VPC
+        AZId: !Ref AvailabilityZone
+        AviVantageVersion: 17.1.3
+        InstanceType: c4.2xlarge
+        KeyName: !Ref KeyName
+        ManagementNetwork: !Ref PublicSubnet
+        SSHLocation: 0.0.0.0/0
+        ClusterSecurityGroup: !GetAtt K8sStack.Outputs.K8SClusterSG
+        K8SMaster: !GetAtt K8sStack.Outputs.MasterPrivateIp
 
 Outputs:
   # Outputs from VPC creation
