--- a/cloud_formation/kubernetes-cluster-with-new-vpc.template
+++ b/cloud_formation/kubernetes-cluster-with-new-vpc.template
@@ -40,13 +40,10 @@ Metadata:
     - Label:
         default: Advanced
       Parameters:
-      - NetworkingProvider
       - K8sNodeCapacity
       - InstanceType
       - DiskSizeGb
       - BastionInstanceType
-      - QSS3BucketName
-      - QSS3KeyPrefix
 
     ParameterLabels:
       KeyName:
@@ -63,12 +60,6 @@ Metadata:
         default: Instance Type (Bastion Host)
       K8sNodeCapacity:
         default: Node Capacity
-      QSS3BucketName:
-        default: S3 Bucket
-      QSS3KeyPrefix:
-        default: S3 Key Prefix
-      NetworkingProvider:
-        default: Networking Provider
 
 # The Parameters allow the user to pass custom settings to the stack before creation
 Parameters:
@@ -236,7 +227,7 @@ Parameters:
     AllowedValues:
     - flannel
     - weave
-    ConstraintDescription: 'Currently supported values are "calico" and "weave"'
+    ConstraintDescription: 'Currently supported values is "weave"'
     Default: weave
     Description: Choose the networking provider to use for communication between
       pods in the Kubernetes cluster.
@@ -559,3 +550,12 @@ Outputs:
     Description: Verify your cluster and deploy a test application. Instructions -
       http://jump.heptio.com/aws-qs-next
     Value: !GetAtt K8sStack.Outputs.NextSteps
+
+  # Outputs forwarded from the Avi template
+  AviControllerURL:
+    Description: URL to access Avi Controller UI. It may take upto 10 min for the Avi Controller to initially startup. 
+    Value: !Sub https://AviStack.Outputs.PublicIp/
+  AviLoginInfo:
+    Description: Default login info for Avi Controller login.
+    Value: Username- admin Password- avi123$%
+
