added missing PropagateAtLaunch: 'true'

--- a/src/main/templates/kubernetes-cluster-create.template
+++ b/src/main/templates/kubernetes-cluster-create.template
@@ -605,6 +605,7 @@ Resources:
         PropagateAtLaunch: 'true'
       - Key: Type
         Value: PrivateNode
+        PropagateAtLaunch: 'true'
       - Key: KubernetesCluster
         Value:
           Fn::If:
@@ -649,6 +650,7 @@ Resources:
         PropagateAtLaunch: 'true'
       - Key: Type
         Value: PublicNode
+        PropagateAtLaunch: 'true'
       - Key: KubernetesCluster
         Value:
           Fn::If:
